# advent_of_code_puzzle

./: .pre-commit-config.yaml  LICENSE  Makefile  README.MD  project.toml  pyproject.toml  pyrightconfig.json
.github/workflows/: test.yml
src/: main.py
src/input/25/: 1_sample_b.txt
src/puzzle_solved/: results.json
src/puzzle_solver/25/: 1.py  2.py  3.py  4.py  5.py  6.py
src/utils/: __init__.py  aoc_config.py  config.py  core.py  pydantic_model.py  solver.py
tests/unit/: test_filemanager.py
